--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-PORT = 3000
+PORT=5000
+MONGO_URL="mongodb://localhost:27017/ecommerce"
+JWT_SECRET = "fdskljlfdjslkj324234l23j4ikjfsdijoij313123k4kn423"
