--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "server" : "nodemon index.js"
+    "start": "nodemon server.js",
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
