--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.3",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
